Refactor browser skills and supporting workflows